--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "5.1.3"
   }
 }
