--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-slick": "^0.29.0",
-    "react-slider": "^2.0.5",
+    "swiper": "^10.0.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
