--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.4",
     "next-images": "^1.8.5",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "swiper": "^10.0.4",
     "typescript": "5.1.3"
