--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "next": "13.4.4",
     "next-images": "^1.8.5",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "swiper": "^10.0.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@types/aos": "^3.0.4",
+    "@types/react-datepicker": "^4.11.2"
   }
 }
