--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.4",
     "next-images": "^1.8.5",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "swiper": "^10.0.3",
