--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
+    "socket.io-client": "^4.7.2",
     "swiper": "^10.0.4",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
-    "@types/react-datepicker": "^4.11.2"
+    "@types/react-datepicker": "^4.11.2",
+    "@types/uuid": "^9.0.2"
   }
 }
