--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
-    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "eslint": "8.42.0",
@@ -21,19 +21,14 @@
     "next": "13.4.4",
     "next-images": "^1.8.5",
     "react": "18.2.0",
-    "react-animation-on-scroll": "^5.1.0",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
-    "react-scroll": "^1.8.9",
-    "socket.io-client": "^4.7.2",
-    "swiper": "^10.0.4",
-    "typescript": "5.1.3",
-    "uuid": "^9.0.0"
+    "swiper": "^10.0.3",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
-    "@types/react-datepicker": "^4.11.2",
-    "@types/uuid": "^9.0.2"
+    "@types/react-datepicker": "^4.11.2"
   }
 }
