--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@types/uuid": "^9.0.2",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -24,8 +25,10 @@
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.7.2",
     "swiper": "^10.0.3",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
