--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "swiper": "^10.0.3",
     "typescript": "5.1.3",
